# cavr-demo

./: .gitignore  CMakeLists.txt  README.md
Assets/: BossMusicTrigger.cs  CaVR.cs  DragonHealth.cs  FireLauncher.cs  Main.unity  New Terrain 1.asset  OverlordHealth.cs  OverlordWall.cs  Pursue.xml  Racer.unity  StateMachineTest.cs  TestCollision.cs  VRPNInputManager.cs  overlordAttack.cs  screenprep.cs  testEnemyCollision.cs  testcavr.cs  testparticlecollision.cs
Assets/AI Prefabs/: Ai Overload.prefab  DragonBoss.prefab  EnemyPlayer.cs  EnemyWeapon.cs  FireballDamage.cs  OverridableMotor.cs  PlayerHealth.cs  Spider.prefab  SpiderDamage.cs  SpiderHealth.cs
Assets/Animations/: ChangeCam.cs  Detect.cs  FemaleAvatar.unity  ForwardShortGlass.cs  Lightning.cs  WarriorCharacter.controller  Weapons.cs  elf.controller
Assets/Materials/: part_000Mat.mat  (+18 more)
CMakeModules/: FindAssimp.cmake  MagickConfig.cmake
Demo/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
Demo/common/: .CMakeLists.txt.swp  .Makefile.swp  CMakeLists.txt  Makefile
Demo/common/include/: .MainWindow.hpp.swp  .MenuWidget.hpp.swp  .OverlayWidget.hpp.swp  .PhysicsDebug.hpp.swp  GLBufferObject.hpp  GLCamera.hpp  GLFrame.hpp  GLMath.hpp  GLMesh.hpp  GLModel.hpp  GLNode.hpp  GLPrimitive.hpp  GLProgram.hpp  GLRibbon.hpp  GLSpray.hpp  GLStruct.hpp  GLText.h  GLTexture.hpp  GLUIElement.hpp  GLUniform.hpp  GLViewport.hpp  SoundManager.hpp
Demo/common/src/: .GLModel.cpp.swp  .SoundManager.cpp.swp  GLBufferObject.cpp  GLCamera.cpp  GLEmissive.cpp  GLFrame.cpp  GLMath.cpp  GLMesh.cpp  GLModel.cpp  GLNode.cpp  GLPrimitive.cpp  GLProgram.cpp  GLRibbon.cpp  GLShader.cpp  GLSpray.cpp  GLText.cpp  GLTexture.cpp  GLUIElement.cpp  GLUniform.cpp  GLViewport.cpp  SoundManager.cpp
Demo/config/: cavrconfig.lua  double.lua  example.lua  single.lua
Demo/include/: GLScene.hpp  SoundPlayer.hpp  Spray.h  Spray.hpp  cavr.hpp
Demo/models/: BLENDSWAP_LICENSE.txt  black.mtl  blob.mtl  blue.mtl  brush.mtl  circle.mtl  coords.mtl  crdotx_saphire.blend  dragon.mtl  green.mtl  paint.mtl  pallet.mtl  purple.mtl  red.mtl  redsphere.mtl  spray.mtl  spraycan.mtl  white.mtl  yellow.mtl
Demo/shaders/: .nfs00000003403aa0a60000049a  .nfs00000003403aa0a70000049b  .nfs00000003403aa0a9000004a0  .nfs00000003403aa0aa0000049c  .nfs00000003403aa0ab0000049d  .nfs00000003403aa80900000499  directional.glsl  fragment.glsl  pointlight.glsl  spotlight.glsl  textfragment.glsl  tfragment.glsl  vertex.glsl
Demo/source/: GLScene.cpp  SoundPlayer.cpp  Spray.cpp  app.cpp
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+167 files in other folders)
